--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "license": "ISC",
     "dependencies": {
       "express": "^4.16.4",
-      "uuidv4": "6.2.13"
+      "uuid": "^9.0.0"
     }
   }
   
